# agent-worker

./: CLAUDE.md  GEMINI.md
.agent/: last-run-result.txt  queue.md  run-queue.sh  run.sh  status.sh
.agent/tasks/: add-cors.md  add-tests.md  catalog-be-endpoints.md  catalog-be-entities.md  catalog-fe-panel.md  catalog-fe-public.md  change-api-url.md  code-review-security.md  fix-502.md  fix-api-url.md  fix-docker-dev.md  fix-network.md  fix-nginx-cors.md  fix-run-sh-ratelimit.md  hardening-pdf-retry.md  hardening-rate-limiting.md  hardening-stripe-idempotency.md  notifications-triggers.md  orders-be-entities.md  orders-be-stripe.md  orders-fe-panel.md  orders-fe-public.md  setup-docker-dev.md  simplify-registration.md  tenants-be-entities.md  tenants-be-middleware.md  tenants-be-stripe.md  tenants-fe-onboarding.md  update-claude-md.md  update-queue.md  vouchers-be-core.md  vouchers-be-hangfire.md  vouchers-be-pdf.md  vouchers-fe-panel.md  write-documentation.md  (+1 more)
.claude/: settings.local.json
orchestrator/: .gitignore  ARCHITECTURE.md  README.md  agent-runner  pyproject.toml  setup.sh
orchestrator/runner/: __init__.py  classifier.py  cli.py  config.py  env.py  git_ops.py  hooks.py  lock.py  models.py  notify.py  queue_manager.py  rotation.py  scheduler.py  state_manager.py  task_generator.py  task_parser.py  validators.py
orchestrator/runner/agents/: __init__.py  aider.py  base.py  claude.py  codex.py  gemini.py
orchestrator/runner/templates/: .env.example  TASK_GUIDE.md  __init__.py  config.yml  task.md
orchestrator/templates/: PROJECT.md  config.yml  queue.md
